Opened 14 years ago
Closed 14 years ago
#1602 closed defect (fixed)
h263 crash with lowres
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | h263 lowres |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
the sample from ticket #742 seems to crash ffmpeg when lowres is enabled
http://ffmpeg.org/trac/ffmpeg/raw-attachment/ticket/742/M3_E3TrailerMC56k7fps.mov
(gdb) r -vlowres 1 -i M3_E3TrailerMC56k7fps.mov -f null -
Starting program: d:\mingw\msys\1.0\ffmpeg\ffmpeg_g.exe -vlowres 1 -i M3_E3Trail
erMC56k7fps.mov -f null -
[New Thread 276.0x56c]
ffmpeg version 0.10.2.git Copyright (c) 2000-2012 the FFmpeg developers
built on Jun 28 2012 19:36:59 with gcc 4.6.1
configuration: --disable-ffprobe --disable-ffplay --disable-asm
libavutil 51. 63.100 / 51. 63.100
libavcodec 54. 29.101 / 54. 29.101
libavformat 54. 11.100 / 54. 11.100
libavdevice 54. 0.100 / 54. 0.100
libavfilter 3. 0.100 / 3. 0.100
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 15.100 / 0. 15.100
[h263 @ 03b32028] illegal ac vlc code at 3x0
[h263 @ 03b32028] Error at MB: 3
Program received signal SIGSEGV, Segmentation fault.
0x7c910a19 in wcsncpy () from C:\WINDOWS\system32\ntdll.dll
(gdb) bt
#0 0x7c910a19 in wcsncpy () from C:\WINDOWS\system32\ntdll.dll
#1 0x7c91a2b6 in ntdll!RtlpUnWaitCriticalSection ()
from C:\WINDOWS\system32\ntdll.dll
#2 0x7c970552 in ntdll!RtlpNtMakeTemporaryKey ()
from C:\WINDOWS\system32\ntdll.dll
#3 0x7c94bafc in ntdll!LdrFindEntryForAddress ()
from C:\WINDOWS\system32\ntdll.dll
#4 0x03a30000 in ?? ()
#5 0x7c91a1ba in ntdll!RtlpUnWaitCriticalSection ()
from C:\WINDOWS\system32\ntdll.dll
#6 0x77c1c2de in msvcrt!free () from C:\WINDOWS\system32\msvcrt.dll
#7 0x03a30000 in ?? ()
#8 0x00a178a6 in av_free (ptr=<optimized out>) at libavutil/mem.c:180
#9 av_freep (arg=0x3b5a170) at libavutil/mem.c:187
#10 0x005c7593 in free_picture (pic=0x3b59fd8, s=0x3b15b48)
at libavcodec/mpegvideo.c:395
#11 ff_MPV_common_end (s=0x3b15b48) at libavcodec/mpegvideo.c:942
#12 0x00a5f6b6 in ff_h263_decode_end (avctx=0x3b32028)
at libavcodec/h263dec.c:127
#13 0x00a44478 in avcodec_close (avctx=0x3b32028) at libavcodec/utils.c:1683
#14 0x00449401 in avformat_find_stream_info (ic=0x3a3d3f0, options=0x3a3df98)
at libavformat/utils.c:2703
#15 0x0040e963 in opt_input_file (o=0x22fdc8, opt=0x3a327ae "i",
filename=<optimized out>) at ffmpeg.c:4340
#16 0x004133b3 in parse_option (optctx=0x22fdc8, opt=<optimized out>,
arg=0x3a327b0 "M3_E3TrailerMC56k7fps.mov", options=0xa9cd60)
at cmdutils.c:311
#17 0x00413616 in parse_options (optctx=0x22fdc8, argc=8,
argv=<optimized out>, options=0xa9cd60,
parse_arg_function=0x40ff70 <opt_output_file>) at cmdutils.c:344
#18 0x00a3b859 in main (argc=8, argv=0x3a32858) at ffmpeg.c:5914
(gdb)
Change History (2)
comment:1 by , 14 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | h263 lowres added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.


